# drf-car-project

./: .env.sample  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
cars/: admin.py  apps.py  filters.py  models.py  paginators.py  serializers.py  services.py  tests.py  urls.py  views.py
cars/migrations/: 0001_initial.py
config/: settings.py  urls.py
coverage/: coverage-report.txt
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
